# AxC

./: .gitignore  AxC.cpp  AxC.h  CMakeLists.txt  run.sh  test_run.sh
src/: AST.cpp  AST.h  AxC.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  TreeWalker.cpp  TreeWalker.h
test/helloworld/: helloworld.ax
